KubernetesStudy/dockerweb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jeff-dockerweb-webapp
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: jeff-dockerweb-webapp
  ports:
    - name: http
      port: 8080
      nodePort: 30080
  type: NodePort
 
#    type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: jeff-nginx

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  type: NodePort
  selector:
    app: jeff-nginx
  ports:
    - name: http
      nodePort: 30081
      port: 80
#    type: NodePort
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: fleetman-api-gateway
#spec:
#  selector:
#    app: api-gateway
#  ports:
#    - name: http
#      port: 8080
#  type: ClusterIP
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: fleetman-vehicle-telemetry
#spec:
#  selector:
#    app: vehicle-telemetry
#  ports:
#    - name: http
#      port: 8080
#  type: ClusterIP
