KubernetesStudy/dockerweb-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: tomcat-dockerweb-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   rules:
   - host: tomcat-dockerweb-ingress.info
     http:
       paths:
       - path: /
         backend:
           serviceName: tomcat-dockerweb-ingress
           servicePort: 8080
       - path: /v2
         backend:
           serviceName: tomcat-dockerweb-ingress-v2
           servicePort: 8080
